fixed loader anim alignment issue on some mobile (iOS) browsers

--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -36,7 +36,7 @@ footer .wrapper .title {
 }
 
 footer .wrapper .subtitle {
-	color: #7f8491;
+	color: #8b909c;
 	font-size: 0.75rem;
 	margin: 0;
 }
