--- a/src/components/css/map.css
+++ b/src/components/css/map.css
@@ -5,8 +5,15 @@
 .mapboxgl-popup-content {
 	padding: 10px;
 	border-radius: 3px;
-	box-shadow: 0px 19px 45px -20px rgba(0, 0, 0, 0.6), 0px 36px 50px -44px rgba(0, 0, 0, 0.27),
+	box-shadow: 0px 19px 45px -20px rgba(0, 0, 0, 0.6),
+		0px 36px 50px -44px rgba(0, 0, 0, 0.27),
 		0px 1px 3px -3px rgba(0, 0, 0, 0.41);
+}
+
+.mapboxgl-popup-content,
+.mapboxgl-popup-tip {
+	position: relative;
+	bottom: 16px;
 }
 
 .mapboxgl-popup-close-button {
