--- a/src/components/css/spinner.css
+++ b/src/components/css/spinner.css
@@ -1,6 +1,6 @@
 .loader-container {
 	position: absolute;
-	top: calc(50% + 30px);
+	top: 55vh;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 1;
